# hugging-face-streamlit

./: .gitpod.yml  init.sh  pyproject.toml
src/: label.py  main.py  notebook.ipynb  processing.py  review_text.py  sentiment.py  utils.py
src/data/: hugging.xlsx
